# WeightEstimation

./: Makefile  README.md  db_structure.txt  docker-compose.yaml
.github/workflows/: lab2.yml  lab3.yml  lab4.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.test.yaml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  ex.env  pyproject.toml
backend/scripts/: generate_openapi.py  init_db.py
backend/tests/api_tests/: pyproject.toml
backend/tests/api_tests/cases/: conftest.py
backend/tests/api_tests/cases/routes/: test_healthcheck.py
backend/tests/api_tests/src/api_tests/: __init__.py
backend/tests/common_tests/: pyproject.toml
backend/tests/common_tests/cases/: conftest.py
backend/tests/common_tests/cases/sql/scripts/: test_weight_class_status.py
backend/tests/common_tests/cases/sql/scripts/admin/: test_is_subordanate.py
backend/tests/common_tests/cases/sql/scripts/weight_class/: test_predict_result.py  test_set_status.py
backend/tests/testlib/: pyproject.toml
backend/tests/testlib/src/testlib/: __init__.py
backend/tests/testlib/src/testlib/sql/: alembic.py  database.py  engine.py
backend/tests/worker_tests/: pyproject.toml
backend/tests/worker_tests/cases/: conftest.py
backend/tests/worker_tests/cases/pipelines/weight_class/: test_predict_result.py
charts/ecommerce-app/: Chart.yaml  values.yaml
charts/ecommerce-app/templates/: _helpers.tpl  deployment.yaml  service.yaml
frontend/: Dockerfile  Makefile  docker-compose.yaml  eslint.config.mjs  nuxt.config.ts  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml
frontend/app/: app.vue  hey-api.ts
frontend/app/assets/css/: main.css
frontend/app/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/app/client/@pinia/: colada.gen.ts
frontend/app/client/client/: client.gen.ts  types.gen.ts  utils.gen.ts
frontend/app/client/core/: bodySerializer.gen.ts  params.gen.ts  pathSerializer.gen.ts  queryKeySerializer.gen.ts  serverSentEvents.gen.ts  types.gen.ts  utils.gen.ts
frontend/app/components/: AppLogo.vue  AppSidebar.vue
frontend/app/components/invoice/: NewInvoiceDialog.vue
frontend/app/components/sign-in/: ForgotPasswordDialog.vue
frontend/app/components/ui/dialog/: DialogFooter.vue
frontend/app/components/ui/item/: Item.vue  ItemDescription.vue  index.ts
frontend/app/components/user/: UserCard.vue  UserItem.vue
frontend/app/components/verification/: NewVerificationDialog.vue  VerificationCard.vue
frontend/app/composables/: auth.ts
frontend/app/const/: invoiceBadge.ts  userRole.ts  verificationBadge.ts
frontend/app/middleware/: hasToken.ts  noToken.ts
frontend/app/pages/: index.vue
frontend/app/pages/account/: [user_id].vue  index.vue
frontend/app/pages/integrations/: [user_id].vue
frontend/app/pages/invoices/: index.vue
frontend/app/pages/sign-in/: index.vue
frontend/app/pages/sign-up/: index.vue
frontend/app/pages/sign-up/validate/: index.vue
frontend/app/pages/users/: index.vue
frontend/app/pages/verifications/: [weight_class_id].vue  index.vue
frontend/app/plugins/: hey-api.ts
frontend/app/types/: nuxt.config.ts
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
k8s/: ecommerce-app.yaml  postgres-config.yaml  postgres-secret.yaml  postgres.yaml
