[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/api",
    "packages/worker",
    "packages/db_setup",
    "tests/testlib",
    "tests/api_tests",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.mypy]
exclude_gitignore = true

disallow_untyped_defs = true
disallow_untyped_calls = true

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py312"
line-length = 160
respect-gitignore = true
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplifications
    "RUF", # Ruff-specific rules
    "COM", # enforce trailing comma rules
    "DTZ", # require strict timezone manipulation with datetime
    "FBT", # detect boolean traps
    "N",   # enforce naming conventions, e.g. ClassName vs function_name
]

ignore = [
    "FBT003", # Boolean positional value in function call
    "E501",   # line too long (handled by formatter)
    "B008",   # FastAPI dependency injection false positives
]

[tool.ruff.lint.isort]
known-first-party = ["api", "common", "worker", "db_setup", "testlib", "api_tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
