[project]
name = "testlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mykhailo Razbeiko", email = "mykhailo.razb@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "common",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
common = { workspace = true }
